# fluxcore

./: Cargo.toml  README.md
res/: gradient.lib.glsl  help.txt  legend.fragment.glsl  legend.vertex.glsl  points.fragment.glsl  points.vertex.glsl  texture.fragment.glsl  texture.vertex.glsl
samples/: breast_pca.csv  debug.csv  kerning.csv  missing.csv
src/: data.rs  main.rs  render.rs  textdrawer.rs
